# drake-external-examples

./: README.md
drake_bazel_download/: README.md  WORKSPACE.bazel  install_prereqs.sh
drake_bazel_download/.github/workflows/: ci.yml
drake_bazel_external/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  install_prereqs.sh
drake_bazel_installed/: WORKSPACE.bazel
drake_custom_subset/: .bazelrc  BUILD.bazel  CMakeLists.txt  README.md  TODO.md  WORKSPACE  drake.bzl  eigen.bzl  fcl.bzl  fmt.bzl  run.sh  spdlog.bzl  stx.bzl  tinyobjloader.bzl
drake_custom_subset/wrap/: .bazelrc.in  BUILD.bazel  WORKSPACE  ccd.bzl  drake.bzl  eigen.bzl.in  fcl.bzl  fmt.bzl.in  octomap.bzl  spdlog.bzl  spruce.bzl  stx.bzl  tinyobjloader.bzl
private/test/: file_sync_test.py
