# -*- mode: python -*-
# vi: set ft=python :

# Copyright (c) 2019, Toyota Research Institute.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# * Redistributions of source code must retain the above copyright notice, this
#   list of conditions and the following disclaimer.
#
# * Redistributions in binary form must reproduce the above copyright notice,
#   this list of conditions and the following disclaimer in the documentation
#   and/or other materials provided with the distribution.
#
# * Neither the name of the copyright holder nor the names of its contributors
#   may be used to endorse or promote products derived from this software
#   without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

load(
    "@drake//tools/install:install.bzl",
    "install",
)
load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_transitive_installed_hdrs_filegroup",
)

COMPONENTS = [
    "@drake//multibody/plant",
]

cc_library(
    name = "stuff",
    deps = COMPONENTS,
)

# Create a single library with symbols from all the COMPONENTS plus any
# statically linked Drake externals.
cc_binary(
    name = "libdrake_custom_subset.so",
    linkshared = True,  # Create a shared library.
    linkstatic = False,  # Prefer to link *.so not *.a for the deps.
    deps = COMPONENTS,
)

# Gather the headers associated with the library.
drake_transitive_installed_hdrs_filegroup(
    name = "headers",
    deps = COMPONENTS,
)

# Install the library and its headers.
install(
    name = "install",
    targets = ["libdrake_custom_subset.so"],
    hdrs = [":headers"],
    hdr_dest = "include/drake",
    allowed_externals = ["@drake//:LICENSE.TXT"],  # Root for the #include paths.
    deps = [
        # TODO(jwnimmer-tri) We need to install libdrake_marker.so also, somehow.
        # "@drake//common:install",
    ],
)
